# ResearchKit

./: .env.example  .gitignore  Dockerfile  README.md  ResearchKit-PRD.md  docker-compose.cloudflare.local.yml  docker-compose.cloudflare.yml  docker-compose.yml
deploy/cloudflared/: config.yml
deploy/nginx/: default.conf.template
develop/: docker-compose.yml
docs/: architecture.md  features.md  roadmap.md
scripts/: setup_cloudflare_local_tunnel.sh
services/researchkit/: Dockerfile  README.md  pyproject.toml
services/researchkit/researchkit/: __init__.py  db.py  main.py
services/researchkit/researchkit/agents/: base.py  figure_agent.py  main_agent.py  patch_utils.py  research_agent.py  review_agent.py  runner_client.py  str_replace_editor.py  tools.py  workspace_context.py
services/researchkit/researchkit/api/: models.py  routes.py
services/researchkit/researchkit/config/: loader.py  schema.py  secret_crypto.py
services/researchkit/researchkit/latex/: models.py  parser.py
services/researchkit/researchkit/literature/: __init__.py  arxiv_client.py  asta_mcp_client.py  cache.py  openalex_client.py  search.py  semantic_scholar.py  verify.py
services/researchkit/researchkit/memory/: latex_parser.py  memory.py  schema.py
services/researchkit/researchkit/providers/: base.py  claude_provider.py  model_discovery.py  openai_provider.py  registry.py
services/researchkit/researchkit/runner/: main.py
services/researchkit/tests/: test_api_routes.py  test_asta_mcp_client.py  test_config_loader.py  test_main_agent.py  test_provider_registry.py  test_research_agent.py  test_runner_client.py  test_str_replace_editor.py
services/web/config/: settings.defaults.js
(+34 files in other folders)
