[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "researchkit"
version = "0.1.0"
description = "ResearchKit — AI agent service for academic paper production"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.0.0",
    "openai>=1.40.0",
    "anthropic>=0.34.0",
    "cryptography>=43.0.0",
    "motor>=3.5.0",
    "pydantic>=2.8.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "mcp>=1.12.4",
    "arxiv>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
